Fix Sidebar Gap

--- a/src/styles/brackets.less
+++ b/src/styles/brackets.less
@@ -773,7 +773,7 @@ a, img {
 }
 
 #sidebar {
-    position: relative;
+    position: absolute;
     white-space: nowrap;
 }
 
